@@ -470,7 +470,7 @@ include_once('include/page_header.php');
 
 		if(!count(get_accessible_nodes_by_user($USER_DETAILS,PERM_READ_WRITE,PERM_RES_IDS_ARRAY))) access_deny();
 
-		if(isset($_REQUEST['hostid'])){
+		if(isset($_REQUEST['hostid']) && $_REQUEST['form'] != 'full_clone'){
 			$create_new = false;
 			$msg_ok = S_HOST_UPDATED;
 			$msg_fail = S_CANNOT_UPDATE_HOST;
