@@ -1,5 +1,6 @@
 Changes for 1.8.5rc1
 
+ - [ZBX-3350] fixed minor interface bug and it is now not possible to add host name longer then 64 chars (KB)
  - [ZBX-3341] fixed host export - valuemap property is now exported as expected (KB)
  - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)
  - [ZBX-954] fix minor typos (Richlv)
